[gd_scene load_steps=8 format=3 uid="uid://bnp5yf4j7gjpx"]

[ext_resource type="StyleBox" uid="uid://c5x52ku10ofab" path="res://src/menu/button_normal.tres" id="1_jsv5s"]
[ext_resource type="Script" path="res://src/menu/menu.gd" id="1_syvxs"]
[ext_resource type="Texture2D" uid="uid://vy15ccy5i33v" path="res://assets/gfx/bgs/backgroungstart2.png" id="2_fpqhr"]
[ext_resource type="StyleBox" uid="uid://dkcv6bou47q5p" path="res://src/menu/button_hover.tres" id="2_ofox0"]
[ext_resource type="StyleBox" uid="uid://cddhkm3vxv4ls" path="res://src/menu/button_pressed.tres" id="3_c0578"]

[sub_resource type="Theme" id="Theme_iu8oi"]
default_font_size = 64
Button/colors/font_color = Color(0.988235, 0.913725, 0.00392157, 1)
Button/colors/font_hover_color = Color(0.988235, 0.913725, 0.00392157, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/constants/outline_size = 10
Button/styles/disabled = ExtResource("1_jsv5s")
Button/styles/focus = null
Button/styles/hover = ExtResource("2_ofox0")
Button/styles/normal = ExtResource("1_jsv5s")
Button/styles/pressed = ExtResource("3_c0578")

[sub_resource type="LabelSettings" id="LabelSettings_kbu0s"]
font_size = 100

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_iu8oi")
script = ExtResource("1_syvxs")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_fpqhr")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -313.5
offset_right = 313.5
offset_bottom = 140.0
grow_horizontal = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 100

[node name="Label" type="Label" parent="MarginContainer2"]
layout_mode = 2
text = "Less is Quest"
label_settings = SubResource("LabelSettings_kbu0s")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Start"

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
focus_mode = 0
text = "Continue"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Options"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
